[tool.poetry]
name = "py-stupy"
version = "0.1.0"
description = ""
authors = ["AlexanderSeryakov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^6.1.0"
black = "^23.12.0"
mypy = "^1.7.1"
autopep8 = "^2.0.4"

[tool.coverage.run]
omit = [
    "src/examples/*",
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
